# Copyright (c) 2010 Daniel Pfeifer <daniel@pfeifer-mail.de>

cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(CppExercises)

enable_testing()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_subdirectory(Ex1)
add_subdirectory(Ex2)
add_subdirectory(Ex3)
add_subdirectory(Ex4)
add_subdirectory(Ex5)
add_subdirectory(Ex6)
add_subdirectory(Ex9)
